<resources>
    <string name="app_name">Vocabulary Creator</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="learn">Learn</string>
    <string name="train">Train</string>
    <string name="type_word">Type word</string>
    <string name="type_translation">Type translation</string>
    <string name="new_word">New word</string>
    <string name="edit_word">Edit word</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
