<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wordsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ColorEdgeEffect"
            />

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addWordFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_behavior="com.przemyslawlusnia.vocabularycreator.wordlist.presentation.ScrollAwareFABBehavior"
        app:layout_anchor="@id/wordsRecyclerView"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_plus_white_24dp"
        />

</android.support.design.widget.CoordinatorLayout>