<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/wordEditTxt"
        android:hint="@string/type_word"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="16dp"
        />

    <EditText
        android:id="@+id/translationEditTxt"
        android:hint="@string/type_translation"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="16dp"
        />

</LinearLayout>